// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalStyle, lets see renders with GlobalStyle included! 1`] = `
<header
  style={
    Object {
      "alignItems": "center",
      "background": "rebeccapurple",
      "display": "flex",
      "justifyContent": "spaceBetween",
      "marginBottom": "1.45rem",
    }
  }
>
  <div
    style={
      Object {
        "margin": "0 auto",
        "maxWidth": 960,
        "padding": "1.45rem 1.0875rem",
      }
    }
  >
    <h1
      style={
        Object {
          "margin": 0,
        }
      }
    >
      <a
        href="/"
        style={
          Object {
            "color": "white",
            "textDecoration": "none",
          }
        }
      >
        
      </a>
    </h1>
  </div>
</header>
`;

exports[`Header renders correctly 1`] = `
<header
  style={
    Object {
      "alignItems": "center",
      "background": "rebeccapurple",
      "display": "flex",
      "justifyContent": "spaceBetween",
      "marginBottom": "1.45rem",
    }
  }
>
  <div
    style={
      Object {
        "margin": "0 auto",
        "maxWidth": 960,
        "padding": "1.45rem 1.0875rem",
      }
    }
  >
    <h1
      style={
        Object {
          "margin": 0,
        }
      }
    >
      <a
        href="/"
        style={
          Object {
            "color": "white",
            "textDecoration": "none",
          }
        }
      >
        Default Starter
      </a>
    </h1>
  </div>
</header>
`;
